--- a/public/index.html
+++ b/public/index.html
@@ -70,48 +70,48 @@
 
         <div class="container">
           <div class="grid">
-            <div class="col-md-4">
-              <div class="card shadow-lg p-3 mb-5 bg-white rounded grid-item admin">
+            <div class="item admin col-md-4 grid-item me-2" data-category="admin">
+              <div class="card shadow-lg p-3 mb-2 bg-white rounded">
                 <div class="card-body text-center">
                   <div class="card-title">Star Admin</div>
                   <div class="card-text">Admin &amp; DashBoard</div>
                 </div><img class="card-img-bottom" src="./assets/img/template/tabler01.png" alt="Feature" />
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card shadow-lg p-3 mb-5 bg-white rounded grid-item admin">
+            <div class="item admin col-md-4 grid-item me-2" data-category="admin">
+              <div class="card shadow-lg p-3 mb-2 bg-white rounded">
                 <div class="card-body text-center">
                   <div class="card-title">Star Admin</div>
                   <div class="card-text">Admin &amp; DashBoard</div>
                 </div><img class="card-img-bottom" src="./assets/img/template/tabler02.png" alt="Feature" />
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card shadow-lg p-3 mb-5 bg-white rounded grid-item admin">
+            <div class="item admin col-md-4 grid-item me-2" data-category="admin">
+              <div class="card shadow-lg p-3 mb-2 bg-white rounded">
                 <div class="card-body text-center">
                   <div class="card-title">Star Admin</div>
                   <div class="card-text">Admin &amp; DashBoard</div>
                 </div><img class="card-img-bottom" src="./assets/img/template/tabler03.png" alt="Feature" />
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card shadow-lg p-3 mb-5 bg-white rounded grid-item admin">
+            <div class="item admin col-md-4 grid-item me-2" data-category="admin">
+              <div class="card shadow-lg p-3 mb-2 bg-white rounded">
                 <div class="card-body text-center">
                   <div class="card-title">Star Admin</div>
                   <div class="card-text">Admin &amp; DashBoard</div>
                 </div><img class="card-img-bottom" src="./assets/img/template/tabler04.png" alt="Feature" />
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card shadow-lg p-3 mb-5 bg-white rounded grid-item dash">
+            <div class="item dash col-md-4 grid-item me-2" data-category="dash">
+              <div class="card shadow-lg p-3 mb-2 bg-white rounded">
                 <div class="card-body text-center">
                   <div class="card-title">Star Admin</div>
                   <div class="card-text">Admin &amp; DashBoard</div>
                 </div><img class="card-img-bottom" src="./assets/img/template/tabler05.png" alt="Feature" />
               </div>
             </div>
-            <div class="col-md-4">
-              <div class="card shadow-lg p-3 mb-5 bg-white rounded grid-item">
+            <div class="item business col-md-4 grid-item me-2" data-category="business">
+              <div class="card shadow-lg p-3 mb-2 bg-white rounded">
                 <div class="card-body text-center">
                   <div class="card-title">Star Admin</div>
                   <div class="card-text">Admin &amp; DashBoard</div>
@@ -142,6 +142,8 @@
     <script src="./vendors/is/is.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="./vendors/fontawesome/all.min.js"></script>
+    <script src="./vendors/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="./vendors/isotope-packery/packery-mode.pkgd.min.js"></script>
     <script src="./assets/js/theme.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;family=Volkhov:wght@700&amp;display=swap" rel="stylesheet">
