--- a/public/index.html
+++ b/public/index.html
@@ -39,25 +39,51 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
-      <section class="pt-0">
+
+
+      <!-- ============================================-->
+      <!-- <section> begin ============================-->
+      <section class="py-5">
+
         <div class="container">
-          <h1 class="pt-9 fs-14 fw-bold">ThemeWagon</h1>
-          <h2>HTML5 Template Collection 2022</h2>
-          <h5 class="mt-3">One Hundred Pre-build website</h5><a class="btn btn-primary mt-3 mt-md-5"><i class="fas fa-cloud-download-alt me-3"></i>Download Free</a>
-        </div>
+          <div class="row">
+            <div class="col-md-6 align-self-center">
+              <h1 class="fs-lg-10 fs-md-10 fw-bold">ThemeWagon</h1>
+              <h2 class="fs-4">HTML5 Template Collection 2022</h2>
+              <h5 class="mt-3">One Hundred Pre-build website</h5><a class="btn btn-primary mt-2 mt-lg-5"><i class="fas fa-cloud-download-alt me-3"></i>Download Free</a>
+            </div>
+            <div class="col-md-6 d-flex align-items-center"><img class="img-fluid d-sm-none d-lg-block" src="./assets/img/superhero/background.jpg" /></div>
+          </div>
+        </div><!-- end of .container-->
+
       </section>
+      <!-- <section> close ============================-->
+      <!-- ============================================-->
+
+
       <nav class="navbar navbar-expand-lg navbar-light sticky-top pt-4" data-navbar-on-scroll="data-navbar-on-scroll">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
-              <li class="nav-item"><a class="nav-link" href="#" data-filter="*">All</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".admin">Admin & Dashboard</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".business">Business & Corporate</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".landing">Landing Pages</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".ecommerce">E-commerce</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".food">Food & Restaurant</a></li>
-              <li class="nav-item"></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter="*" data-bs-nav="data-bs-nav">All</a></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter=".admin" data-bs-nav="data-bs-nav">Admin & Dashboard</a></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter=".business" data-bs-nav="data-bs-nav">Business & Corporate</a></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter=".landing" data-bs-nav="data-bs-nav">Landing Pages</a></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter=".ecommerce" data-bs-nav="data-bs-nav">E-commerce</a></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter=".food" data-bs-nav="data-bs-nav">Food & Restaurant</a></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter=".medical" data-bs-nav="data-bs-nav">Medical & Health Care</a></li>
+              <li class="nav-item"><a class="nav-link" href="#" data-filter=".travel" data-bs-nav="data-bs-nav">Travel & Booking</a></li>
+              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#" data-filter=".photography">Multipurpose</a></li>
+                  <li><a class="dropdown-item" href="#" data-filter=".coming">Personal</a></li>
+                  <li><a class="dropdown-item" href="#" data-filter=".other">PortFolio</a></li>
+                  <li><a class="dropdown-item" href="#" data-filter=".photography">Photography</a></li>
+                  <li><a class="dropdown-item" href="#" data-filter=".coming">Coming Soon</a></li>
+                  <li><a class="dropdown-item" href="#" data-filter=".other">Other</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
