--- a/public/index.html
+++ b/public/index.html
@@ -63,29 +63,25 @@
 
       <nav class="navbar navbar-expand-lg navbar-light sticky-top pt-4" data-navbar-on-scroll="data-navbar-on-scroll">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
-          <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item"><a class="nav-link" href="#" data-filter="*" data-bs-nav="data-bs-nav">All</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".admin" data-bs-nav="data-bs-nav">Admin & Dashboard</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".business" data-bs-nav="data-bs-nav">Business & Corporate</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".landing" data-bs-nav="data-bs-nav">Landing Pages</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".ecommerce" data-bs-nav="data-bs-nav">E-commerce</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".food" data-bs-nav="data-bs-nav">Food & Restaurant</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".medical" data-bs-nav="data-bs-nav">Medical & Health Care</a></li>
-              <li class="nav-item"><a class="nav-link" href="#" data-filter=".travel" data-bs-nav="data-bs-nav">Travel & Booking</a></li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#" data-filter=".photography">Multipurpose</a></li>
-                  <li><a class="dropdown-item" href="#" data-filter=".coming">Personal</a></li>
-                  <li><a class="dropdown-item" href="#" data-filter=".other">PortFolio</a></li>
-                  <li><a class="dropdown-item" href="#" data-filter=".photography">Photography</a></li>
-                  <li><a class="dropdown-item" href="#" data-filter=".coming">Coming Soon</a></li>
-                  <li><a class="dropdown-item" href="#" data-filter=".other">Other</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item"><a class="nav-link" href="#" data-filter="*" data-bs-nav="data-bs-nav">All</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".admin" data-bs-nav="data-bs-nav">Admin & Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".business" data-bs-nav="data-bs-nav">Business & Corporate</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".landing" data-bs-nav="data-bs-nav">Landing Pages</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".ecommerce" data-bs-nav="data-bs-nav">E-commerce</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".food" data-bs-nav="data-bs-nav">Food & Restaurant</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".medical" data-bs-nav="data-bs-nav">Medical & Health Care</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".travel" data-bs-nav="data-bs-nav">Travel & Booking</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".photography">Multipurpose</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".coming">Personal</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".other">PortFolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".photography">Photography</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".coming">Coming Soon</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".other">Other</a></li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+              <div class="dropdown-menu" id="category-list" aria-labelledby="navbarDropdown"></div>
+            </li>
+          </ul>
         </div>
       </nav>
 
