--- a/public/index.html
+++ b/public/index.html
@@ -61,25 +61,21 @@
       <!-- ============================================-->
 
 
-      <nav class="navbar navbar-expand-lg navbar-light sticky-top pt-4" data-navbar-on-scroll="data-navbar-on-scroll">
+      <nav class="navbar navbar-expand navbar-light sticky-top pt-4" data-navbar-on-scroll="data-navbar-on-scroll">
         <div class="container-fluid">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item"><a class="nav-link" href="#" data-filter="*" data-bs-nav="data-bs-nav">All</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".admin" data-bs-nav="data-bs-nav">Admin & Dashboard</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".business" data-bs-nav="data-bs-nav">Business & Corporate</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".landing" data-bs-nav="data-bs-nav">Landing Pages</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".ecommerce" data-bs-nav="data-bs-nav">E-commerce</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".food" data-bs-nav="data-bs-nav">Food & Restaurant</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".medical" data-bs-nav="data-bs-nav">Medical & Health Care</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".travel" data-bs-nav="data-bs-nav">Travel & Booking</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".photography">Multipurpose</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".coming">Personal</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".other">PortFolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".photography">Photography</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".coming">Coming Soon</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".other">Other</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter="*" data-bs-nav="data-bs-nav">All</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".admin" data-bs-nav="data-bs-nav">Admin & Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".business" data-bs-nav="data-bs-nav">Business & Corporate</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".landing" data-bs-nav="data-bs-nav">Landing Pages</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".ecommerce" data-bs-nav="data-bs-nav">E-commerce</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".food" data-bs-nav="data-bs-nav">Food & Restaurant</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".medical" data-bs-nav="data-bs-nav">Medical & Health Care</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".travel" data-bs-nav="data-bs-nav">Travel & Booking</a></li>
+            <li class="nav-item"><a class="nav-link text-nowrap" href="#" data-filter=".photography">Multipurpose</a></li>
+            <li class="nav-item"></li>
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-              <div class="dropdown-menu" id="category-list" aria-labelledby="navbarDropdown"></div>
+              <ul class="dropdown-menu category-list" aria-labelledby="navbarDropdown"></ul>
             </li>
           </ul>
         </div>
