--- a/public/index.html
+++ b/public/index.html
@@ -73,12 +73,12 @@
             <li class="nav-item"><a class="nav-link" href="#" data-filter=".food" data-bs-nav="data-bs-nav">Food & Restaurant</a></li>
             <li class="nav-item"><a class="nav-link" href="#" data-filter=".medical" data-bs-nav="data-bs-nav">Medical & Health Care</a></li>
             <li class="nav-item"><a class="nav-link" href="#" data-filter=".travel" data-bs-nav="data-bs-nav">Travel & Booking</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".multipurpose">Multipurpose</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".personal">Personal</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".portfolio">PortFolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".photography">Photography</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".coming">Coming Soon</a></li>
-            <li class="nav-item"><a class="nav-link" href="#" data-filter=".other">Other</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".multipurpose" data-bs-nav="data-bs-nav">Multipurpose</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".personal" data-bs-nav="data-bs-nav">Personal</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".portfolio" data-bs-nav="data-bs-nav">PortFolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".photography" data-bs-nav="data-bs-nav">Photography</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".coming" data-bs-nav="data-bs-nav">Coming Soon</a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-filter=".other" data-bs-nav="data-bs-nav">Other</a></li>
             <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
               <div class="dropdown-menu category-list" aria-labelledby="navbarDropdown"></div>
             </li>
