--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
               <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".travel" data-bs-nav="data-bs-nav">Travel & Booking</a></li>
               <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".multipurpose" data-bs-nav="data-bs-nav">Multipurpose</a></li>
               <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".personal" data-bs-nav="data-bs-nav">Personal</a></li>
-              <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".portfolio" data-bs-nav="data-bs-nav">PortFolio</a></li>
+              <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".portfolio" data-bs-nav="data-bs-nav">Portfolio</a></li>
               <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".photography" data-bs-nav="data-bs-nav">Photography</a></li>
               <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".game" data-bs-nav="data-bs-nav">Game & Anime</a></li>
               <li class="nav-item"><a class="nav-link fw-medium" href="javascript: void(0)" data-filter=".other" data-bs-nav="data-bs-nav">Other</a></li>
@@ -921,16 +921,16 @@
           </div>
           <!--/.bg-holder-->
 
+          <div class="bg-holder  " style="background-image:url(assets/img/footer/frame.png);background-size: auto;background-position: top;">
+          </div>
+          <!--/.bg-holder-->
+
           <div class="container text-center pt-10 z-index-1">
             <h1 class="mb-4 fw-bold text-white fs-10">Ready to get started?</h1>
             <p class="text-white fw-medium">
               HTML5 Template Collection 2022<br />One Hundred Pre-build website</p><a class="text-black btn btn-info mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
             <p class="mb-0 text-white mt-6 fs--1">Brought to you with<span class="text-success fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
-          <div class="bg-holder  " style="background-image:url(assets/img/footer/frame.png);background-size: auto;background-position: top;">
-          </div>
-          <!--/.bg-holder-->
-
         </div><!-- end of .container-->
 
       </section>
