--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
           </div>
           <!--/.bg-holder-->
 
-          <div class="bg-holder bottom-0 " style="background-image:url(assets/img/hero/frame.png);background-size: auto;background-position: bottom;">
+          <div class="bg-holder bottom-0 " style="background-image:url(assets/img/hero/frame.svg);background-size: auto;background-position: bottom;">
           </div>
           <!--/.bg-holder-->
 
