--- a/showcase/public/index.html
+++ b/showcase/public/index.html
@@ -74,7 +74,8 @@
               </defs>
             </svg>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -910,7 +911,8 @@
                 </div>
               </a></div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -942,7 +944,8 @@
               HTML5 Template Collection 2022<br />One Hundred Pre-build website</p><a class="text-black btn btn-info mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
             <p class="mb-0 text-white mt-6 fs--1">Brought to you with<span class="text-success fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
