--- a/showcase/public/index.html
+++ b/showcase/public/index.html
@@ -51,21 +51,22 @@
 
         <div class="px-0">
           <div class="container text-center z-index-1"><img class="mb-4" src="assets/img/hero/final.png" alt="" width="250" />
-            <p class="text-white fw-semi-bold fs-4">HTML5 Template Collection 2022<br />One Hundred Pre-build website</p><a class="text-black btn btn-info mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
+            <p class="text-white fw-semi-bold fs-4">HTML5 Template Collection 2022<br />One Hundred Pre-build website</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
           </div>
           <div class="z-index-1 w-100 position-absolute bottom-0">
-            <svg width="100%" height="100%" viewBox="0 0 1440 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0_6_331)">
-                <path d="M4.07891 25.6305C708.541 -92.0278 936.529 246.24 1923.98 25.6305C1951.03 19.5861 1923.98 134 1923.98 134H4.07891C4.07891 134 -23.0986 30.1697 4.07891 25.6305Z" fill="url(#paint0_linear_6_331)"></path>
+            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1920 141" fill="none">
+              <g clip-path="url(#clip0_223_855)">
+                <path d="M-0.999896 26.5C703.462 -91.1583 936.529 246.24 1923.98 25.6305C1951.03 19.5861 1923.98 134 1923.98 134H4.07897C4.07897 134 -28.1774 31.0392 -0.999896 26.5Z" fill="url(#paint0_linear_223_855)"></path>
                 <path d="M-7.84653 76.3018C700.964 6.05803 930.359 208.009 1923.9 76.3018C1951.12 72.6932 1923.9 141 1923.9 141H-7.84653C-7.84653 141 -35.1918 79.0117 -7.84653 76.3018Z" fill="white"></path>
               </g>
               <defs>
-                <linearGradient id="paint0_linear_6_331" x1="-8" y1="0" x2="1936" y2="0" gradientUnits="userSpaceOnUse">
-                  <stop stop-color="#2169FC"></stop>
-                  <stop offset="1" stop-color="#62FFFF"></stop>
+                <linearGradient id="paint0_linear_223_855" x1="-12" y1="0.000468637" x2="1916" y2="0.000468637" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#332D77"></stop>
+                  <stop offset="0.317984" stop-color="#554CB3"></stop>
+                  <stop offset="1" stop-color="#4A4A7F"></stop>
                 </linearGradient>
-                <clipPath>(id="clip0_6_331")
-                  <rect width="100%" height="100%" fill="white"></rect>
+                <clipPath id="clip0_223_855">
+                  <rect width="1920" height="141" fill="white"></rect>
                 </clipPath>
               </defs>
             </svg>
@@ -103,7 +104,7 @@
                 <div class="dropdown-menu dropdown-menu-end category-list" aria-labelledby="navbarDropdown" data-category-list="data-category-list"></div>
               </li>
             </ul>
-          </nav><a class="back-to-top bg-info" href="#" data-back-to-top="data-back-to-top"><i class="fas fa-angle-double-up"> </i></a>
+          </nav><a class="back-to-top bg-success" href="#" data-back-to-top="data-back-to-top"><i class="fas fa-angle-double-up"> </i></a>
           <div class="row mt-4 grid">
             <div class="col-lg-4 col-6 mb-3 item admin"><a class="text-decoration-none" href="https://prium.github.io/phoenix/v1.0.0/index.html" data-category="admin">
                 <div class="card mb-2 bg-white card-showcase">
@@ -930,7 +931,7 @@
 
           <div class="container text-center pt-10 z-index-1 pb-3">
             <h1 class="fw-bold text-white fs-10">Ready to get started?</h1>
-            <p class="text-white fw-medium fs-3">Get the entire collection in your inbox</p><a class="text-black btn btn-info mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
+            <p class="text-white fw-medium fs-3">Get the entire collection in your inbox</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
             <p class="mb-0 text-white mt-6 fs--1">Brought to you with<span class="text-success fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
         </div><!-- end of .container-->
