--- a/showcase/public/index.html
+++ b/showcase/public/index.html
@@ -71,7 +71,8 @@
               </defs>
             </svg>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -907,7 +908,8 @@
                 </div>
               </a></div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -934,7 +936,8 @@
             <p class="text-white fw-medium fs-3">Get the entire collection in your inbox</p><a class="text-white btn btn-success mt-2 mt-lg-5 mb-5"><i class="fas fa-download me-3"></i>Download Free</a>
             <p class="mb-0 text-white mt-6 fs--1">Brought to you with<span class="text-success fas fa-heart mx-1"></span>from<a class="text-decoration-none ms-1 text-white" href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
