--- a/showcase/public/index.html
+++ b/showcase/public/index.html
@@ -263,10 +263,10 @@
                   <p class="card-text text-dark">Portfolio</p><img class="card-img-bottom" src="assets/img/template/img24.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item law"><a class="text-decoration-none" href="https://technext.github.io/ariclaw/index.html" data-category="law">
+            <div class="col-lg-4 col-6 mb-3 item other"><a class="text-decoration-none" href="https://technext.github.io/ariclaw/index.html" data-category="other">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Ariclaw</h5>
-                  <p class="card-text text-dark">Law Firm</p><img class="card-img-bottom" src="assets/img/template/img25.png" alt="Feature" />
+                  <p class="card-text text-dark">other</p><img class="card-img-bottom" src="assets/img/template/img25.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item other"><a class="text-decoration-none" href="https://technext.github.io/eventalk/index.html" data-category="other">
@@ -281,7 +281,7 @@
                   <p class="card-text text-dark">Travel &amp; booking</p><img class="card-img-bottom" src="assets/img/template/img27.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item agency"><a class="text-decoration-none" href="https://technext.github.io/tournest/" data-category="agency">
+            <div class="col-lg-4 col-6 mb-3 item travel"><a class="text-decoration-none" href="https://technext.github.io/tournest/" data-category="travel">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Tournest</h5>
                   <p class="card-text text-dark">Travel Agency</p><img class="card-img-bottom" src="assets/img/template/img28.png" alt="Feature" />
@@ -449,10 +449,10 @@
                   <p class="card-text text-dark">Other</p><img class="card-img-bottom" src="assets/img/template/img58.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item agency"><a class="text-decoration-none" href="https://technext.github.io/digital-1/" data-category="agency">
+            <div class="col-lg-4 col-6 mb-3 item other"><a class="text-decoration-none" href="https://technext.github.io/digital-1/" data-category="other">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">DGital</h5>
-                  <p class="card-text text-dark">Agency</p><img class="card-img-bottom" src="assets/img/template/img59.png" alt="Feature" />
+                  <p class="card-text text-dark">other</p><img class="card-img-bottom" src="assets/img/template/img59.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item ecommerce"><a class="text-decoration-none" href="https://technext.github.io/famms/index.html" data-category="ecommerce">
@@ -545,10 +545,10 @@
                   <p class="card-text text-dark">Medical &amp; Health Care</p><img class="card-img-bottom" src="assets/img/template/img74.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item financial"><a class="text-decoration-none" href="https://technext.github.io/karma/index.html" data-category="financial">
+            <div class="col-lg-4 col-6 mb-3 item ecommerce"><a class="text-decoration-none" href="https://technext.github.io/karma/index.html" data-category="ecommerce">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Digitalex </h5>
-                  <p class="card-text text-dark">Financial</p><img class="card-img-bottom" src="assets/img/template/img75.png" alt="Feature" />
+                  <p class="card-text text-dark">E-commerce</p><img class="card-img-bottom" src="assets/img/template/img75.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item other"><a class="text-decoration-none" href="https://technext.github.io/eden/index.html" data-category="other">
@@ -587,10 +587,10 @@
                   <p class="card-text text-dark">Business</p><img class="card-img-bottom" src="assets/img/template/img80.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item "><a class="text-decoration-none" href="https://technext.github.io/karmo/" data-category="">
+            <div class="col-lg-4 col-6 mb-3 item portfolio"><a class="text-decoration-none" href="https://technext.github.io/karmo/" data-category="portfolio">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Karmo</h5>
-                  <p class="card-text text-dark"></p><img class="card-img-bottom" src="assets/img/template/img81.png" alt="Feature" />
+                  <p class="card-text text-dark">Portfolio</p><img class="card-img-bottom" src="assets/img/template/img81.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item admin"><a class="text-decoration-none" href="https://technext.github.io/celestialAdmin-free-admin-template/" data-category="admin">
@@ -617,10 +617,10 @@
                   <p class="card-text text-dark">Business</p><img class="card-img-bottom" src="assets/img/template/img85.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item "><a class="text-decoration-none" href="https://technext.github.io/cial/index.html" data-category="">
+            <div class="col-lg-4 col-6 mb-3 item business"><a class="text-decoration-none" href="https://technext.github.io/cial/index.html" data-category="business">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Cial</h5>
-                  <p class="card-text text-dark"></p><img class="card-img-bottom" src="assets/img/template/img86.png" alt="Feature" />
+                  <p class="card-text text-dark">Business</p><img class="card-img-bottom" src="assets/img/template/img86.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item ecommerce"><a class="text-decoration-none" href="https://technext.github.io/ashion/index.html" data-category="ecommerce">
@@ -629,10 +629,10 @@
                   <p class="card-text text-dark">E-commerce</p><img class="card-img-bottom" src="assets/img/template/img87.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item music"><a class="text-decoration-none" href="https://technext.github.io/podcast/index.html" data-category="music">
+            <div class="col-lg-4 col-6 mb-3 item other"><a class="text-decoration-none" href="https://technext.github.io/podcast/index.html" data-category="other">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Podcast</h5>
-                  <p class="card-text text-dark">Music</p><img class="card-img-bottom" src="assets/img/template/img88.png" alt="Feature" />
+                  <p class="card-text text-dark">Other</p><img class="card-img-bottom" src="assets/img/template/img88.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item portfolio"><a class="text-decoration-none" href="https://technext.github.io/rezume/index.html" data-category="portfolio">
@@ -665,16 +665,16 @@
                   <p class="card-text text-dark">Admin &amp; DashBoard</p><img class="card-img-bottom" src="assets/img/template/img93.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item anime"><a class="text-decoration-none" href="https://technext.github.io/game-warrior/index.html" data-category="anime">
+            <div class="col-lg-4 col-6 mb-3 item game"><a class="text-decoration-none" href="https://technext.github.io/game-warrior/index.html" data-category="game">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Game Warrior</h5>
                   <p class="card-text text-dark">Game &amp; Anime</p><img class="card-img-bottom" src="assets/img/template/img94.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item magazine"><a class="text-decoration-none" href="https://technext.github.io/meranda/index.html" data-category="magazine">
+            <div class="col-lg-4 col-6 mb-3 item photography"><a class="text-decoration-none" href="https://technext.github.io/meranda/index.html" data-category="photography">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Meranda</h5>
-                  <p class="card-text text-dark">Magazine</p><img class="card-img-bottom" src="assets/img/template/img95.png" alt="Feature" />
+                  <p class="card-text text-dark">Photography</p><img class="card-img-bottom" src="assets/img/template/img95.png" alt="Feature" />
                 </div>
               </a></div>
             <div class="col-lg-4 col-6 mb-3 item admin"><a class="text-decoration-none" href="https://reduction-admin.github.io/react-reduction/" data-category="admin">
@@ -701,10 +701,10 @@
                   <p class="card-text text-dark">Photography </p><img class="card-img-bottom" src="assets/img/template/img99.png" alt="Feature" />
                 </div>
               </a></div>
-            <div class="col-lg-4 col-6 mb-3 item news "><a class="text-decoration-none" href="https://technext.github.io/newsbox/index.html" data-category="news ">
+            <div class="col-lg-4 col-6 mb-3 item other "><a class="text-decoration-none" href="https://technext.github.io/newsbox/index.html" data-category="other ">
                 <div class="card mb-2 bg-white card-showcase text-center">
                   <h5 class="card-title fw-bold text-success mb-0 mt-3">Newsboxs</h5>
-                  <p class="card-text text-dark">News </p><img class="card-img-bottom" src="assets/img/template/img100.png" alt="Feature" />
+                  <p class="card-text text-dark">Other </p><img class="card-img-bottom" src="assets/img/template/img100.png" alt="Feature" />
                 </div>
               </a></div>
           </div>
